fixing dnd on mobile (ticket group height)

--- a/src/styles/components/_ticket-group.scss
+++ b/src/styles/components/_ticket-group.scss
@@ -13,7 +13,7 @@
     position: relative;
 
     @media (hover: none) and (pointer: coarse) {
-        max-height: 400px;
+        max-height: 500px;
     }
 
     .ticket-group-header {
